# agent_skills_lab

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  token_based.md
.ai_ecosystems/: README.md  deliver_ecosystem.py  ecosystem_delivery_service.py  ecosystem_lib.py
.ai_ecosystems/codebase-context/: Dockerfile  ECOSYSTEM.md  generate_codebase_context.py
.ai_ecosystems/ecosystem-audit/: ECOSYSTEM.md
.ai_ecosystems/repository-docs/: ECOSYSTEM.md
.ai_ecosystems/repository-governance/: ECOSYSTEM.md
.devcontainer/: Dockerfile  devcontainer.json  init-docker.sh
.github/: AGENT_SKILL_ROUTING.md  ECOSYSTEM_REGISTRY.md  copilot-instructions.md
.github/agents/: README.md  codebase-context.agent.md  ecosystem-audit.agent.md  governance-ecosystem-delivery.agent.md  governance-ecosystem-manifest.agent.md  governance-repository-context-manager.agent.md
.github/ecosystems/: MCP_TOOLS.json  README.md  deliver_ecosystem.py  ecosystem_catalog_service.py  ecosystem_core_update_service.py  ecosystem_delivery_service.py  ecosystem_install_service.py  ecosystem_lib.py  ecosystem_registry_validation_service.py  install_ecosystem.py  install_ecosystem.sh  mcp_models.py  mcp_server.py  mcp_settings.py  mcp_tool_registry.py  runtime_container_lib.sh  update_ecosystem_core_files.py  update_ecosystem_core_files.sh  validate_ecosystem_registry.py  validate_ecosystem_registry.sh
.github/skills/: README.md
docs/: AI_AGENT_INSTRUCTIONS.md  DOCUMENTATION_UPDATE_RULES.md  README.md  TODO.md
tests/: conftest.py
(+94 files in other folders)
