[project]
name = "agent-skills-lab"
version = "0.0.0"
description = "Development and experimentation lab for custom agents, skills, and installable ecosystems."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
  "unit: fast unit tests for ecosystem helpers and validators",
  "integration: filesystem and subprocess-backed ecosystem tests",
]
